--- a/lib/dndsections.sty
+++ b/lib/dndsections.sty
@@ -27,7 +27,7 @@
   % Chapter
   \titleformat {\chapter}
     { \DndFontChapter } % format
-    { \DndContour{\chaptertitlename\ \thechapter :} } % label
+    { \DndContour{ \thechapter :} } % label
     { \wordsep } % sep
     { \DndContour } % before-code
 
